<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="7dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/log_in_to_your_m_bank_account"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/acc_num"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_account_number_here"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/your_mpin"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:hint="@string/your_pin_here"/>
            </android.support.design.widget.TextInputLayout>
           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               app:cardElevation="5dp"
               app:cardCornerRadius="7dp"
               android:layout_marginBottom="10dp"
               android:layout_height="wrap_content">
               <Button
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/log_in"
                   android:id="@+id/login_now"
                   android:background="@color/colorAccent"/>
           </android.support.v7.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_not_have_an_account_yet"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textColor="#00308F"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:id="@+id/tregister"
                    android:text="@string/register_here"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>