<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_deposit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.smartboma.development.m_bankingapp.UI.Deposit">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar"/>
    <TextView
        android:text="@string/deposit_cash"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:textColor="#000"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/makeDeposit"
            android:hint="@string/enter_the_amount_to_deposit"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/placeDeposit"
        android:background="@color/colorAccent"
        android:text="@string/send_the_amount_to_my_account"/>
</LinearLayout>
