<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_change_pin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.smartboma.development.m_bankingapp.UI.ChangePIN">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="4dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="4dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/oldpin"
                    android:textSize="14sp"
                    android:inputType="numberPassword"
                    android:textColor="#000"
                    android:hint="@string/enter_old_pin"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/newPIN"
                    android:inputType="numberPassword"
                    android:textSize="14sp"
                    android:textColor="#000"
                    android:hint="@string/enter_new_pin"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirmPIN"
                    android:inputType="numberPassword"
                    android:textSize="14sp"
                    android:textColor="#000"
                    android:hint="@string/confirm_new_pin"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/change_pinm"
                android:background="@color/colorAccent"
                android:text="@string/change_mpin"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
